name:              imghost
version:           0.0.5
license:           BSD3
license-file:      LICENSE
author:            
maintainer:        
synopsis:          Source for imghost
description:       Source for imghost
category:          Web
stability:         Experimental
cabal-version:     >= 1.6
build-type:        Simple
homepage:          http://imghost.pankajmore.in

Flag devel
    description:   Build for yesod devel
    default:       False

Flag production
    Description:   Build the production executable.
    Default:       False


library
    if flag(devel)
        buildable: True
        cpp-options: -DDEVELOPMENT
    else
        buildable: False

    exposed-modules: Application
    other-modules:   Foundation
                     Models
                     Settings
                     Forms.Search
                     Forms.Upload
                     Forms.Caption
                     Forms.Profile
                     Forms.Image
                     Helpers.Document
                     Helpers.Storage
                     Handler.Display
                     Handler.Recent
                     Handler.Root
                     Handler.Search
                     Handler.Upload
                     Handler.Image
                     Handler.Profile
                     Handler.Json
                     Handler.Vote
                     Handler.Download
                     Handler.Caption
                     Handler.Delete
                     Settings.StaticFiles

executable imghost
    if flag(devel)
        buildable: False
    
    if flag(production)
        cpp-options:   -DPRODUCTION
        ghc-options:   -Wall -threaded -O2
    else
        --buildable: True
        ghc-options: -Wall -threaded -O2

    main-is:        main.hs

    build-depends: base  >= 4   && < 5
                 , yesod >= 0.9 && < 1.0
                 , yesod-core
                 , yesod-auth == 0.7.4
                 , yesod-form
                 , yesod-persistent
                 , yesod-static
                 , yesod-default
                 , wai-app-static
                 , yesod-comments < 0.6
                 , yesod-goodies == 0.0.5
 --                , wai-extra
 --                , containers
                 , bytestring
                 , text
                 , time
                 , random
                 , process
                 , clientsession
                 , aeson-native
                 , haskell98
 --                , persistent
 --                , persistent-template
                 , persistent-sqlite 
                 , hamlet                >= 0.10 && < 0.11
                 , blaze-builder
 --                , blaze-html
 --                , transformers
 --                , clientsession
 --                , unix
  
source-repository head
  type:     git
  location: git://bitbucket.org/satvikc/imghost.git
